Bug#16143 mysql_stmt_sqlstate returns an empty string instead of '00000'  - Init sql_state in mysql_stmt_init